2009-07-14  Marek Habersack  <mhabersack@novell.com>

	* ConfigurationSaveEventArgs.cs, ConfigurationSaveEventHandler.cs:
	added

	* Configuration.cs: added two internal events - SaveStart and
	SaveEnd. They are used by System.Web's configuration system to
	suppress application reloads when configuration is modified and
	saved from within a web application. It is necessary to use events
	since there is no guarantee the web application will use
	WebConfigurationManager (and thus WebConfigurationHost) for
	writing.

2009-06-08  Marek Habersack  <mhabersack@novell.com>

	* ConfigurationLocation.cs: if the path passed to constructor
	starts with any of ' ' '.' '/' or '\', throw an exception. Fixes
	bug #510735

2008-12-22 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Configuration.cs: don't try to open the file if we know it does not
	exist. Also, don't hide the actual exception in case there's a problem
	opening the configuration file.

2008-11-15 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* ConfigurationManager.cs: the config file name is arbitrary.
	(Standalone test t46)

2008-11-10 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* ConfigurationManager.cs: when we're dealing with an EXE hosted
	application, the configuration file is the one for the AppDomain,
	otherwise we might try to get a config file for a dll. Fixes the
	regression in 2.0 sys.config.

2008-07-09  Marek Habersack  <mhabersack@novell.com>

	* ConfigurationManager.cs: implemented a work-around for
	OpenExeConfiguration ("") not working with ASP.NET apps properly.

2008-07-07  Rodrigo Kumpera  <rkumpera@novell.com>

	* ConfigurationManager.cs: Return the right path if the calling assembly is
	not null. This happens when ConfigurationSession::GetRuntimeObject() is
	called, SectionHandler != null and the handler itself calls
	OpenExeConfigurationInternal ("").

2008-07-07  Rodrigo Kumpera  <rkumpera@novell.com>

	* ClientConfigurationSystem.cs: