@@ -1,3 +1,8 @@
+2009-07-15  Marek Habersack  <mhabersack@novell.com>
+
+	* HttpApplicationFactory.cs: added internal methods to
+	enable/disable specific watchers. Part of fix for bug #522017
+
 2009-07-14 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* ApplicationShutdownReason.cs: add new 3.5 value.
