@@ -1,3 +1,8 @@
+2009-07-15  Marek Habersack  <mhabersack@novell.com>
+
+	* Configuration.cs: explicitly flush the stream when writing XML
+	data. Part of fix for bug #522017
+
 2009-07-14  Marek Habersack  <mhabersack@novell.com>
 
 	* ConfigurationSaveEventArgs.cs, ConfigurationSaveEventHandler.cs:
